# deeprlzero

./: .gitignore  CMakeLists.txt  README.md  cuda_test.cpp
cuda_test/: cuda_test.cpp
include/core/: config.h  evaluator.h  game.h  logger.h  mcts.h  mcts_stats.h  network.h  network_manager.h  neural_network.h  self_play.h  thread.h  tictactoe.h  trainer.h  utils.h
models/: base_model.pt
src/: config.h  eval_stats.h  explorer.cxx  game.cpp  game.cxx  game.h  gradient_test.cpp  logger.h  main.cpp  main.cxx  mcts.cpp  mcts.cxx  mcts.h  minimal_net_test.cpp  network.cpp  network.cxx  network.h  play.cxx  play_tictactoe.cxx  selfplay.h  thread.h  trainer.cxx  trainer.h  trainer.inl
src/core/: evaluator.cpp  game.cpp  logger.cpp  mcts.cpp  network.cpp  network_manager.cpp  neural_network.cpp  neural_network.h  self_play.cpp  tictactoe.cpp  trainer.cpp  utils.cpp
src/explorers/: chess.cxx  tictactoe.cxx
src/games/: chess.cxx  chess.h  concepts.h  connect4.h  game.cxx  game.h  positions.h  selfplay.h  tictactoe.cxx  tictactoe.h  traits.h  variant.cxx  variant.h
src/games/chess/: CMakeLists.txt  bitboard.h  geometry.cpp  geometry.h  move.cpp  move.h  move_generation.cpp  move_generation.h  random.h  square.cpp  square.h  state.cpp  state.h  string_transforms.cpp  string_transforms.h  types.h
src/play/: play_tictactoe.cxx
troubleshoot/: CMakeLists.txt
troubleshooting/: troubleshooting.cpp
tuning/: tune_parameters.cpp
